--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@capacitor/android": "^5.7.3",
+    "@capacitor/cli": "^5.7.3",
+    "@capacitor/core": "^5.7.3",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.0",
     "chart.js": "^4.4.2",
     "rxfire": "^6.0.3",
