--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^5.7.3",
     "@capacitor/cli": "^5.7.3",
     "@capacitor/core": "^5.7.3",
+    "@capacitor/ios": "^5.7.3",
     "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.0",
     "chart.js": "^4.4.2",
     "rxfire": "^6.0.3",
